[package]
name = "poisoner"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.7.3", features = ["full"] }
env_logger = "0.11.9"
futures-util = "0.3.32"
log = "0.4.29"
rocksdb = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
